[package]
name = "yee-merkle"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"
[dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "v1.0" }
blake2-rfc = "0.2.18"
parity-codec = "3.2"


[dev-dependencies]
proptest = "0.8"